# NYPC

./: .gitignore  ALPHAZERO_GUIDE.md  AlphaZero_Implementation_Report.md  CLAUDE.md  README.md  create_branch.sh  generate_data_bin.py  requirements.txt  test_alpha_agent_loading.py  test_heuristic_value.py
.claude/: settings.local.json
practice/: CMakeLists.txt  ab_pruning.cpp  ab_pruning.py  input.txt  log.txt  practice.ipynb  sample_code.py  setting.ini  testing_tool.py
practice/agents/: alpha_agent.py  basic_agent.py
practice/alphazero/: __init__.py  ab_config.json  ab_data_converter.py  ab_self_play.py  alphazero_agent.py  compact_data.py  data_augmentation.py  fast_mcts_wrapper.py  game_board.py  game_history.py  generate_ab_data.py  main_training.py  mcts.py  neural_network.py  neural_network_validity_preference.py  self_play.py  submission.py  test_model_loading.py  test_performance.py  training.py
practice/alphazero/cpp/: BUILD.md  CMakeLists.txt  build.bat  environment.yml  requirements.txt  setup.py
practice/alphazero/cpp/src/: game_board.cpp  game_board.h  python_binding.cpp
practice/core/: action_space.py  alphazero_net.py  board_generator.py  game_board.py  game_rules.py
practice/mcts/: mcts_search.py  mcts_tree.py
practice/models/test/: game_history.h5
practice/testing/: ab_pruning  ab_pruning.cpp  ab_pruning_tuned  ab_pruning_tuned.cpp  input.txt  log.txt  setting.ini  testing_tool.py
practice/training/: data_generator.py  iterative_training.py  self_play.py
python/: README.md  WORK_REPORT.md  config.ini  input.txt  sample-code.py  testing-tool-yacht.py  yacht_nn_submission.py  yacht_submission.py
python/utils/: nn_test.py  nn_trainer.py  yacht_conditional_calculator.py  yacht_exact_calculator.py
